--- a/studio1/index.html
+++ b/studio1/index.html
@@ -23,8 +23,17 @@
     <header></header>
     <main>
         <video id="myVideo" controls="controls" muted loop autoplay playsinline>
-            <source src = "media/skate1.mp4" type="video/mp4">
+            <source src="media/skate1.mp4" type="video/mp4">
         </video>
+        <video id="myVideo2" controls="controls" muted loop autoplay playsinline style="display: none;">
+            <source src="media/skate1Reversed.mp4" type="video/mp4">
+        </video>
+        <section id="poem">
+            <p id="line1" class="hidden">Ye careless souls, be wise,</p>
+            <p id="line2" class="hidden">Of Time's swift course beware;</p>
+            <p id="line3" class="hidden">For, like the meteor's glare,</p>
+            <p id="line4" class="hidden">As soon as seen, it dies.</p>
+          </section>
     </main>
 </body>
 </html>
