--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <h3>toolkit</h3>
                 <nav>
                     <ol>
-                        <li><a href="#">Toolkit Assignment 1</a></li>
+                        <li><a href="wk3-FriendsList-Part1-START/index.html">Toolkit Assignment 1: Friends</a></li>
                         <li><a href="#">Toolkit Assignment 2</a></li>
                         <li><a href="#">Toolkit Assignment 3</a></li>
                     </ol>
