--- a/challenges/index.html
+++ b/challenges/index.html
@@ -21,7 +21,7 @@
             
         }
         pet.greating = function() {alert('Hello There')}
-        greating();
+        pet.greating();
         console.log(pet);
         console.log(`I need to get ${pet.qualities.supplies.length} supplies for ${pet.name} at the store`);
     </script>
