--- a/studio2/index.html
+++ b/studio2/index.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <script src="script.js" defer></script>
+    <title>Display Names</title>
+    <style>
+
+    </style>
 </head>
 <body>
-    
+    <div class="names-container" id="namesContainer">
+        <!-- Names will be dynamically added here -->
+    </div>
+    <div id="container"></div>
+    <div id="popup" class="hidden">
+        <span id="close-btn">&times;</span>
+    <div id="popup-content"></div>
+</div>
 </body>
 </html>
