fixed arrow functions

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <nav>
                     <ol>
                         <li><a href="wk3-FriendsList-Part1-START/index.html">Toolkit Assignment 1: Friends</a></li>
-                        <li><a href="arrowFunctions">Arrow Functions</a></li>
+                        <li><a href="arrowFunctions/">Arrow Functions</a></li>
                         <li><a href="#">Toolkit Assignment 3</a></li>
                     </ol>
                 </nav>
