--- a/studio2/index.html
+++ b/studio2/index.html
@@ -5,18 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="script.js" defer></script>
     <title>Display Names</title>
-    <style>
-
-    </style>
+    
 </head>
 <body>
     <div class="names-container" id="namesContainer">
-        <!-- Names will be dynamically added here -->
+        <link href="styles.css" rel="stylesheet">
+        <!-- <div class ="name">Testing</div>  -->
+        <!-- REMOVE THIS LINE -->
     </div>
     <div id="container"></div>
     <div id="popup" class="hidden">
-        <span id="close-btn">&times;</span>
     <div id="popup-content"></div>
-</div>
+    </div>
 </body>
 </html>
